# AoC25

Day01/: CMakeLists.txt  README.md  main.cpp
Day02/: CMakeLists.txt  README.md  main.cpp
Day03/: CMakeLists.txt  README.md  main.cpp
Day04/: README.md  main.cpp
Day05/: CMakeLists.txt  README.md  main.cpp
Day06/: CMakeLists.txt  README.md  main.cpp
Day07/: CMakeLists.txt  README.md  main.cpp
Day08/: CMakeLists.txt  README.md  main.cpp
Day09/: CMakeLists.txt  README.md  main.cpp
Day10/: CMakeLists.txt  README.md  main.cpp
Day11/: CMakeLists.txt  main.cpp
Day12/: CMakeLists.txt  main.cpp
